@@ -386,3 +386,4 @@ Revision	Version Updated		Log Message
 444		C++			Update data files for new countries in 2.31
 447		C++			No capitalists, clerks, or craftsmen in unciv nations
 448		C++			Refactor EU3 Province
+449		C++			Change removal of dead landless nations to use pop ratios instead of majority culture
